# keyboard-from-scratch

./: LICENSE  README.md  setup.md
blink/: Cargo.toml  README.md  memory.x  runner.gdb
blink/src/: gpio.rs  main.rs
board/: KB789.pro  KB789.sch  README.md  fp-lib-table  sym-lib-table
board/sym/: bluepill.lib
bootloader/: README.md
firmware/: .gitignore  Cargo.toml  target.gdb.example
firmware/.cargo/: config
firmware/src/: cursor.rs  descr.rs  main.rs  pma.rs
