[package]
name = "kb789-blink"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <hidekazu-kobayashi@cookpad.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5"
cortex-m-rt = { version = "0.6", features = ["device"] }
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2"
stm32f1 = { version = "0.6", features = ["rt", "stm32f103"] }
volatile-register = "0.2"
vcell = "0.1.0"

[[bin]]
name = "kb789-blink"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
